iptables.rules
# Generated by iptables-save v1.8.4 on Sat Feb  1 23:05:16 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
# ---- change output def policy to DROP if you ar going to use any of the following 
# -A OUTPUT -o lo -j ACCEPT
#====== SSH
#-- remember to adjust port number in a likely case you've changed it
#-- remember to allow DNS request/response
#-- most likely you will need DHCP too
#-A INPUT -p tcp -m state --state NEW,ESTABLISHED --dport 22 -j ACCEPT
#-A OUTPUT -p tcp -m state --state ESTABLISHED --sport 22 -j ACCEPT
#-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED --dport 22 -j ACCEPT
#====== HTTP(S)
#-- remember to allow DNS request/response
#-- most likely you will need DHCP too
## -A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
## -A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
#====== DNS
## -A OUTPUT -p udp --dport 53 -m udp -j ACCEPT
#====== NTP 
#-- if you firewall OUTPUT, you almost always want this to be on
## -A OUTPUT -p udp -m udp --sport 123 -j ACCEPT
#====== DHCP
#-- very likely you want this on
## -A OUTPUT -p udp -m udp --dport 67:68 -j ACCEPT
#====== MAIL
# default ssl-ed ports, adjust depending on your configuration
#== IMAP
# -A OUTPUT -p tcp -m tcp --dport 993 -j ACCEPT
#== POP3
# -A OUTPUT -p tcp -m tcp --dport 995 -j ACCEPT
#== SMTP
# -A OUTPUT -p tcp -m tcp --dport 465 -j ACCEPT
#====== CUPS 
#--- if you dont use cable connection
#--- and for some applications that expect it
#-A OUTPUT -p udp -m udp --sport 631 -j ACCEPT
#-A OUTPUT -p tcp -m tcp --sport 631 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -m limit --limit 25/minute --limit-burst 100 -j ACCEPT
-A INPUT -p ipv6 -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m recent --set --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A INPUT -p udp -m recent --set --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A TCP -p tcp -m recent --update --seconds 57 --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A TCP -p tcp -j REJECT --reject-with tcp-reset
-A UDP -p udp -j REJECT --reject-with icmp-port-unreachable
COMMIT
